# black_swan_pkg

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: build_doc.yml  checks.yml  release.yml
HiggsML/: datasets.py  derived_quantities.py  ingestion.py  run_competition.py  score.py  systematics.py  visualization.py
docs/: HiggsML.rst  Makefile  conf.py  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: HiggsML.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  HiggsML.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: HiggsML.rst.txt
