[project]
name = "HiggsML"
version = "0.0.0"
authors = [
  { name="Ragansu Chakkappai", email="ragansu@gamil.com" },
]
description = "A Black Swan test package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "frozendict"
]
install_requires=["numpy>=1.26.4",
                  "sklearn>=1.4.2",
                  "pandas>=2.2.2",
                  "matplotlib>=3.9.0",
                  "seaborn>=0.13.1",
                  "frozendict>=2.4.4"
                  ]



[build-system]
requires = ["hatchling", "numpy", "pandas", "scikit-learn", "matplotlib", "seaborn","frozendict"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/blackSwanCS/black_swan_pkg"
Issues = "https://github.com/blackSwanCS/black_swan_pkg/issues"