[project]
name = "HiggsML"
version = "0.0.4"
authors = [
  { name="Ragansu Chakkappai", email="ragansu.chakkappai@universite-paris-saclay.fr"},
  { name="David Rousseau", email="david.rousseau@uijclab.in2p3.fr" },
  { name="V. Estrade", email="v.estrade@centralesupelec.fr" },
  { name="Ihsan Ullah", email="ihsan.ullah@universite-paris-saclay.fr"}
]
description = "A Black Swan test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "frozendict",
    "pyarrow",
    "wget",
    "setuptools"
]
install_requires=["numpy>=1.26.4",
                  "sklearn>=1.4.2",
                  "pandas>=2.2.2",
                  "matplotlib>=3.8.0",
                  "seaborn>=0.13.1",
                  "frozendict>=2.4.4",
                  "pyarrow>=15.0.0",
                  "wget>=3.2",
                  "setuptools>=58.2.0"
                  ]



[build-system]
requires = ["hatchling", "numpy", "pandas", "scikit-learn", "matplotlib", "seaborn", "frozendict", "pyarrow","wget", "setuptools"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/blackSwanCS/black_swan_pkg"
Issues = "https://github.com/blackSwanCS/black_swan_pkg/issues"