[build-system]
requires = ["hatchling>=1.18.0"]  # Only build tools here
build-backend = "hatchling.build"

[project]
name = "HiggsML"
version = "0.1.4"
authors = [
    { name = "Ragansu Chakkappai", email = "ragansu.chakkappai@universite-paris-saclay.fr" },
    { name = "David Rousseau", email = "david.rousseau@uijclab.in2p3.fr" },
    { name = "V. Estrade", email = "v.estrade@centralesupelec.fr" },
    { name = "Ihsan Ullah", email = "ihsan.ullah@universite-paris-saclay.fr" }
]
description = "A Black Swan package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.4",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.1",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "tabulate>=0.9.0",
    "mpld3>=0.5.8",
    "argparse>=1.4.0"
]

[project.urls]
Homepage = "https://github.com/blackSwanCS/black_swan_pkg"
Issues = "https://github.com/blackSwanCS/black_swan_pkg/issues"
Documentation = "https://black-swan-pkg.readthedocs.io/en/latest"